# ns2json

./: README.md  pyproject.toml
src/ns2json/: __about__.py  __init__.py  __main__.py  ns2json.py
src/ns2json/dns/: __init__.py  clean_raw_data.py  format_data.py  pull_data.py  type_a.py  type_aaaa.py  type_mx.py  type_ns.py  type_soa.py  type_txt.py
src/ns2json/utils/: __init__.py  check_sys.py  export_data.py  get_set_args.py
tests/: test_ns2json.py
