[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ns2json"
dynamic = [
  "version"
]
authors = [
  { name = "Bartłomiej Drążkiewicz", email = "bartlomiej@drazkiewicz.me" },
]
description = "A Python script to converts and saves a data from a DNS response to a JSON file."
readme = { "file" = "README.md", "content-type" = "text/markdown" }
license = "MIT"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Networking",
  "Topic :: Internet :: Name Service (DNS),
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: File Formats :: JSON",
]
keywords = [
  "python",
  "mit",
  "script",
  "dns",
  "json",
  "convert",
  "file",
]

[project.urls]
Repository = "https://github.com/drazkgi/ns2json"

[tool.hatch.version]
path = "src/ns2json/__about__.py"